Intial desktop design of clipboard main header and tracks, fix some margins on mobile view

--- a/app/scss/layout/_body.scss
+++ b/app/scss/layout/_body.scss
@@ -5,4 +5,10 @@ body {
   background-color: var(--clr--white);
   font-family: var(--ff--primary);
   font-size: var(--fs--regular);
+
+  @media only screen and (min-width: 992px) {
+    background: url("/images/bg-header-desktop.png") no-repeat;
+    background-size: contain;
+    background-position: top center;
+  }
 }
